Implement main service with events, categories, users and participation requests